--- a/.github/workflows/life.yml
+++ b/.github/workflows/life.yml
@@ -26,7 +26,7 @@ jobs:
     -
       name: Create
       run: |
-        echo ">datetime: $(date) | task_num: $(git rev-list HEAD --count) | entropy_: $(commit-entropy csv | awk -F',' 'NR == 2 { print $2 }' *.csv)" >> changelog.md
+        echo ">datetime: $(date) | task_num: $(git rev-list HEAD --count) | entropy: $(commit-entropy csv | awk -F',' 'NR == 2 { print $2 }' *.csv)" >> changelog.md
         echo "" >> changelog.md
         git config --global user.email 50377477+supertask-bot+caretak3r@users.noreply.github.com
         git config --global user.name 'caretak3r[supertask-bot]'
